plan: DSL rework — verified Shape A (build(){} wrapper), fully b-free
Reworked dsl_rework.md after testing the actual end-user grammar against ae:

- §2.5 NEW: the target is a FULLY b-free node body, not just b-free builder
  calls. Two shapes tested — Shape A (a `build() { … }` wrapper) WORKS and
  threads the build graph (dep_artifact sees dep's write — shared _ctx); Shape
  B (bare aeb(cap) body, no wrapper) does NOT — _ctx resolves to NULL for every
  top-level call, no shared session. Shape A needs no aether change; Shape B
  would need a language change (ambient ctx at fn entry).
- §3: design is now the injected `build()` wrapper + dep/dep_artifact/builders
  all _ctx-injected. Shape A dissolves the old "Risk B" (dep in the node body)
  because dep now sits inside the wrapper's block.
- §3.5: flags the coordination window — the : int sweep (97e189d) just touched
  the same 147 builder signatures the ctx→_ctx rename rides; do both now.
- §4: HONEST about the cost — this is a coordinated FLAG-DAY, not the gradual
  dual-mode earlier drafts hoped for. Shape A changes node structure, so old
  dep(b,…) stops type-checking once dep is _ctx-injected; aeb lib + ~435 nodes
  move together (repos pin pre-flip aeb until their turn).
- §5: spike DONE (Shape A verified, B refuted) — was the pivotal unknown.
- §7: test-bed = servirtium-vcr (114 nodes); aeb itself has ~no real nodes
  outside itests/tests.

Corrected the header + §1 tail (no AETHER change needed; the cost is
coordinated node-structure change, not a language limit).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>